...
                    } else {
                        val startDestination = if (currentUserId != null) "lista_temas" else "login"

                        NavHost(
                            navController = navController,
                            startDestination = startDestination,
                            modifier = Modifier.testTag("navHostRoot")
                        ) {

                            composable("login") {
                                val loginState by authViewModel.loginUiState.collectAsState()
                                LoginScreen(
                                    uiState = loginState,
...
